fixed overlap validation on event model

--- a/app/assets/stylesheets/day_view.scss
+++ b/app/assets/stylesheets/day_view.scss
@@ -21,7 +21,8 @@
 	z-index: 9999;
 	width: 100%;
 	background-color: blue;
-	opacity: 0.5;
+	border: 1px solid #000;
+	border-radius: 4px;
 	padding: 0px;
 	position: absolute;
 	top: -8px;
